# openmeta_gazebo_plugins

openmeta_gazebo_plugins/: CMakeLists.txt  package.xml
transmission_gazebo_plugin/: CMakeLists.txt  package.xml
transmission_gazebo_plugin/include/: transmission_gazebo_plugin.h
transmission_gazebo_plugin/src/: transmission_gazebo_plugin.cpp
